<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10sp">

    <!-- Usuario entrar -->
    <EditText
        android:id="@+id/usuario_entrar"
        android:hint="@string/usuario"
        android:layout_marginTop="150sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Contraseña entrar -->
    <EditText
        android:id="@+id/pass_entrar"
        android:hint="@string/pass"
        android:layout_marginTop="15sp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Boton entrar -->
    <Button
        android:onClick="btn_entrar"
        android:id="@+id/btn_entrar"
        android:text="@string/entrar"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>