<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAcceso">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Imagen camara -->
        <ImageView
            android:src="@drawable/camera"
            android:id="@+id/img_camera"
            android:onClick="img_camera"
            android:layout_marginTop="15sp"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp"/>

        <!-- Texto para guardar -->
        <EditText
            android:id="@+id/texto_guardar"
            android:hint="@string/texto_largo"
            android:inputType="textMultiLine"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="100sp"/>

        <!-- Radio Buttons -->
        <RadioGroup
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Almacenamiento interno -->
            <RadioButton
                android:id="@+id/rb_interno"
                android:text="@string/almacenamiento_interno"
                android:layout_width="match_parent"
                android:layout_height="50sp"/>

            <!-- Almavenamiento externo -->
            <RadioButton
                android:id="@+id/rb_externo"
                android:text="@string/almacenamiento_externo"
                android:layout_width="match_parent"
                android:layout_height="50sp"/>
        </RadioGroup>

        <!-- Boton Guardar -->
        <Button
            android:id="@+id/btn_guardar"
            android:onClick="btn_guardar"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/guardar"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>